improves spacing in home page and fixes repeated download link

--- a/bitcoin_designed/static/css/project.css
+++ b/bitcoin_designed/static/css/project.css
@@ -149,8 +149,8 @@ a:hover {
 #top-div {
 	min-width: 100%;
   height: 22em;
-	padding-bottom: 2em;
-  padding-top: 2em;
+	padding-bottom: 3em;
+  padding-top: 4em;
   box-shadow: inset 0 -10px 25px 4px rgba(0,0,0,0.2);
 }
 
@@ -195,7 +195,7 @@ a:hover {
 #menu-list {
 	margin: 0;
 	padding: 0;
-	margin-top: 0.4em;
+	margin-top: 1em;
 	color: #fff;
 }
 
@@ -207,7 +207,7 @@ a:hover {
 }
 
 .menu-link {
-	font-size: 1.4em;
+	font-size: 1.6em;
 	font-weight: 400;
 	color: #fff;
 	transition: all 0.3s ease-in;
@@ -295,6 +295,8 @@ a:hover {
 
   #top-div {
     height: 16em;
+    padding-top: 2em;
+    padding-bottom: 1em;
   }
 
   #svg-container {
@@ -303,6 +305,10 @@ a:hover {
 
   #nav-left {
     padding-left: 0;
+  }
+
+  .menu-link {
+    font-size: 1.4em;
   }
 }
 
@@ -381,13 +387,13 @@ a:hover {
 /*------------------*/
 
 .tagline {
-  font-size: 3.5em;
+  font-size: 3em;
   text-align: center;
-  max-width: 850px;
+  max-width: 750px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 2em;
-  padding-bottom: 1em;
+  margin-top: 1.8em;
+  padding-bottom: 0.7em;
   padding-right: 0.5em;
   padding-left: 0.5em;
   box-sizing: border-box;
@@ -399,8 +405,8 @@ a:hover {
 	padding: 0;
 	list-style-type: none;
 	text-align: left;
-	margin-top: 5em;
-  margin-bottom: 2em;
+	margin-top: 4em;
+  margin-bottom: 1em;
 }
 
 .tag-item {
@@ -566,10 +572,6 @@ a:hover {
 }
 
 @media (max-width: 640px) {
-	.infographic-container {
-		margin-top: 3.5em;
-	}
-
   .tag-list {
     margin-bottom: 0;
   }
@@ -579,7 +581,7 @@ a:hover {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .tag-list {
     margin-top: 2em;
   }
@@ -588,6 +590,12 @@ a:hover {
     font-size: 2em;
     border-bottom: 6px solid #3acccc;
     padding-bottom: 1.2em;
+  }
+}
+
+@media (max-width: 500px) {
+  .infographic-container {
+    margin-top: 2em;
   }
 }
 
